@@ -22,6 +22,7 @@ dependent-scripts = true
 Jinja2 = 2.7
 Mako = 0.6.2
 MarkupSafe = 0.15
+PyYAML = 3.10
 Pygments = 1.6
 SimpleAES = 0.2
 Sphinx = ${versions:sphinx}
